// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders correctly when data is loaded 1`] = `
<div class="dashboard-container">
  <!---->
  <div class="dashboard-container__wrap">
    <navigationarea-stub class="regular-navigation"></navigationarea-stub>
    <div class="dashboard-container__wrap__column">
      <dashboardheader-stub></dashboardheader-stub>
      <div class="dashboard-container__main-area">
        <div class="dashboard-container__main-area__bar-area">
          <!---->
        </div>
        <div class="dashboard-container__main-area__content">
          <router-view-stub name="default"></router-view-stub>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dashboard renders correctly when data is loading 1`] = `
<div class="dashboard-container">
  <div class="loading-overlay active"><img src="@/../static/images/register/Loading.gif" alt="Company logo loading gif" class="loading-image"></div>
  <!---->
</div>
`;

exports[`Dashboard renders correctly without project and with payment method 1`] = `
<div class="dashboard-container">
  <!---->
  <div class="dashboard-container__wrap">
    <navigationarea-stub class="regular-navigation"></navigationarea-stub>
    <div class="dashboard-container__wrap__column">
      <dashboardheader-stub></dashboardheader-stub>
      <div class="dashboard-container__main-area">
        <div class="dashboard-container__main-area__bar-area">
          <!---->
        </div>
        <div class="dashboard-container__main-area__content">
          <router-view-stub name="default"></router-view-stub>
        </div>
      </div>
    </div>
    <div class="dashboard-container__blur-area">
      <div class="dashboard-container__blur-area__button"><span class="dashboard-container__blur-area__button__label">+ Create Project</span></div>
      <div class="dashboard-container__blur-area__message-box">
        <div class="dashboard-container__blur-area__message-box__left-area">
          <addimage-stub></addimage-stub> <span class="dashboard-container__blur-area__message-box__left-area__message">
                        Create your first project
                    </span>
        </div>
        <closecrossicon-stub class="dashboard-container__blur-area__message-box__close-cross-container"></closecrossicon-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard renders correctly without project and with payment method 2`] = `
<div class="dashboard-container">
  <!---->
  <div class="dashboard-container__wrap">
    <navigationarea-stub class="regular-navigation"></navigationarea-stub>
    <div class="dashboard-container__wrap__column">
      <dashboardheader-stub></dashboardheader-stub>
      <div class="dashboard-container__main-area">
        <div class="dashboard-container__main-area__bar-area">
          <!---->
        </div>
        <div class="dashboard-container__main-area__content">
          <router-view-stub name="default"></router-view-stub>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;
